--- a/benchmark_report.html
+++ b/benchmark_report.html
@@ -193,7 +193,7 @@
 <body>
   <div class="container">
     <h1>systemds-bench-gpt Benchmark Report</h1>
-    <div class="meta">Generated: 2026-01-18 23:38:09 UTC | Total Runs: 22</div>
+    <div class="meta">Generated: 2026-01-19 00:06:50 UTC | Total Runs: 22</div>
     
     <div class="toolbar">
       <button class="btn" onclick="window.print()">
@@ -526,6 +526,8 @@
 <th>Lat CV (%)</th>
 <th>Lat Min (ms)</th>
 <th>Lat Max (ms)</th>
+<th>TTFT (ms)</th>
+<th>Gen (ms)</th>
 <th>throughput (req/s)</th>
 <th>total tok</th>
 <th>avg tok</th>
@@ -555,6 +557,8 @@
 <td>49.9%</td>
 <td>1339.15</td>
 <td>4633.62</td>
+<td>558.55</td>
+<td>1311.52</td>
 <td>0.5347</td>
 <td>1567</td>
 <td>156.7</td>
@@ -584,6 +588,8 @@
 <td>5.0%</td>
 <td>5366.66</td>
 <td>6268.68</td>
+<td>561.53</td>
+<td>5053.77</td>
 <td>0.1780</td>
 <td>3869</td>
 <td>386.9</td>
@@ -613,6 +619,8 @@
 <td>12.8%</td>
 <td>1821.84</td>
 <td>2818.97</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4622</td>
 <td>1620</td>
 <td>162.0</td>
@@ -642,6 +650,8 @@
 <td>21.2%</td>
 <td>1174.13</td>
 <td>2781.90</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4427</td>
 <td>3426</td>
 <td>342.6</td>
@@ -671,6 +681,8 @@
 <td>82.5%</td>
 <td>245.81</td>
 <td>17539.68</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1201</td>
 <td>4785</td>
 <td>478.5</td>
@@ -700,6 +712,8 @@
 <td>38.3%</td>
 <td>3957.80</td>
 <td>15945.78</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0841</td>
 <td>4403</td>
 <td>440.3</td>
@@ -729,6 +743,8 @@
 <td>21.2%</td>
 <td>1107.22</td>
 <td>2650.26</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4571</td>
 <td>3426</td>
 <td>342.6</td>
@@ -758,6 +774,8 @@
 <td>82.4%</td>
 <td>242.27</td>
 <td>16803.45</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1239</td>
 <td>4785</td>
 <td>478.5</td>
@@ -787,6 +805,8 @@
 <td>38.2%</td>
 <td>3933.48</td>
 <td>15997.62</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0853</td>
 <td>4403</td>
 <td>440.3</td>
@@ -816,6 +836,8 @@
 <td>31.3%</td>
 <td>3329.67</td>
 <td>9197.46</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1919</td>
 <td>4528</td>
 <td>452.8</td>
@@ -845,6 +867,8 @@
 <td>24.6%</td>
 <td>692.48</td>
 <td>1501.28</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.9852</td>
 <td>2922</td>
 <td>292.2</td>
@@ -874,6 +898,8 @@
 <td>22.9%</td>
 <td>3469.66</td>
 <td>7542.14</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1769</td>
 <td>3004</td>
 <td>300.4</td>
@@ -903,6 +929,8 @@
 <td>46.0%</td>
 <td>3401.22</td>
 <td>14515.95</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1555</td>
 <td>3004</td>
 <td>300.4</td>
@@ -932,6 +960,8 @@
 <td>12.9%</td>
 <td>1758.68</td>
 <td>2587.07</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4748</td>
 <td>3491</td>
 <td>349.1</td>
@@ -961,6 +991,8 @@
 <td>4.1%</td>
 <td>10137.13</td>
 <td>11561.07</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0926</td>
 <td>7301</td>
 <td>730.1</td>
@@ -990,6 +1022,8 @@
 <td>4.6%</td>
 <td>9736.44</td>
 <td>11321.13</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0979</td>
 <td>6080</td>
 <td>608.0</td>
@@ -1019,6 +1053,8 @@
 <td>118.6%</td>
 <td>797.02</td>
 <td>10289.44</td>
+<td>724.78</td>
+<td>1568.05</td>
 <td>0.4360</td>
 <td>2658</td>
 <td>265.8</td>
@@ -1048,6 +1084,8 @@
 <td>26.3%</td>
 <td>1866.48</td>
 <td>4201.86</td>
+<td>731.07</td>
+<td>2493.08</td>
 <td>0.3101</td>
 <td>3624</td>
 <td>362.4</td>
@@ -1077,6 +1115,8 @@
 <td>50.0%</td>
 <td>715.65</td>
 <td>2704.16</td>
+<td>811.84</td>
+<td>306.79</td>
 <td>0.8927</td>
 <td>721</td>
 <td>72.1</td>
@@ -1106,6 +1146,8 @@
 <td>39.3%</td>
 <td>2069.00</td>
 <td>7996.72</td>
+<td>730.71</td>
+<td>3794.39</td>
 <td>0.2209</td>
 <td>3166</td>
 <td>316.6</td>
@@ -1146,6 +1188,8 @@
 <th>Lat CV (%)</th>
 <th>Lat Min (ms)</th>
 <th>Lat Max (ms)</th>
+<th>TTFT (ms)</th>
+<th>Gen (ms)</th>
 <th>throughput (req/s)</th>
 <th>total tok</th>
 <th>avg tok</th>
@@ -1175,6 +1219,8 @@
 <td>49.9%</td>
 <td>1339.15</td>
 <td>4633.62</td>
+<td>558.55</td>
+<td>1311.52</td>
 <td>0.5347</td>
 <td>1567</td>
 <td>156.7</td>
@@ -1204,6 +1250,8 @@
 <td>5.0%</td>
 <td>5366.66</td>
 <td>6268.68</td>
+<td>561.53</td>
+<td>5053.77</td>
 <td>0.1780</td>
 <td>3869</td>
 <td>386.9</td>
@@ -1233,6 +1281,8 @@
 <td>12.8%</td>
 <td>1821.84</td>
 <td>2818.97</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4622</td>
 <td>1620</td>
 <td>162.0</td>
@@ -1262,6 +1312,8 @@
 <td>21.2%</td>
 <td>1174.13</td>
 <td>2781.90</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4427</td>
 <td>3426</td>
 <td>342.6</td>
@@ -1291,6 +1343,8 @@
 <td>82.5%</td>
 <td>245.81</td>
 <td>17539.68</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1201</td>
 <td>4785</td>
 <td>478.5</td>
@@ -1320,6 +1374,8 @@
 <td>38.3%</td>
 <td>3957.80</td>
 <td>15945.78</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0841</td>
 <td>4403</td>
 <td>440.3</td>
@@ -1349,6 +1405,8 @@
 <td>21.2%</td>
 <td>1107.22</td>
 <td>2650.26</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4571</td>
 <td>3426</td>
 <td>342.6</td>
@@ -1378,6 +1436,8 @@
 <td>82.4%</td>
 <td>242.27</td>
 <td>16803.45</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1239</td>
 <td>4785</td>
 <td>478.5</td>
@@ -1407,6 +1467,8 @@
 <td>38.2%</td>
 <td>3933.48</td>
 <td>15997.62</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0853</td>
 <td>4403</td>
 <td>440.3</td>
@@ -1436,6 +1498,8 @@
 <td>31.3%</td>
 <td>3329.67</td>
 <td>9197.46</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1919</td>
 <td>4528</td>
 <td>452.8</td>
@@ -1465,6 +1529,8 @@
 <td>24.6%</td>
 <td>692.48</td>
 <td>1501.28</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.9852</td>
 <td>2922</td>
 <td>292.2</td>
@@ -1494,6 +1560,8 @@
 <td>22.9%</td>
 <td>3469.66</td>
 <td>7542.14</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1769</td>
 <td>3004</td>
 <td>300.4</td>
@@ -1523,6 +1591,8 @@
 <td>46.0%</td>
 <td>3401.22</td>
 <td>14515.95</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1555</td>
 <td>3004</td>
 <td>300.4</td>
@@ -1552,6 +1622,8 @@
 <td>12.9%</td>
 <td>1758.68</td>
 <td>2587.07</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4748</td>
 <td>3491</td>
 <td>349.1</td>
@@ -1581,6 +1653,8 @@
 <td>4.1%</td>
 <td>10137.13</td>
 <td>11561.07</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0926</td>
 <td>7301</td>
 <td>730.1</td>
@@ -1610,6 +1684,8 @@
 <td>4.6%</td>
 <td>9736.44</td>
 <td>11321.13</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0979</td>
 <td>6080</td>
 <td>608.0</td>
@@ -1639,6 +1715,8 @@
 <td>118.6%</td>
 <td>797.02</td>
 <td>10289.44</td>
+<td>724.78</td>
+<td>1568.05</td>
 <td>0.4360</td>
 <td>2658</td>
 <td>265.8</td>
@@ -1668,6 +1746,8 @@
 <td>26.3%</td>
 <td>1866.48</td>
 <td>4201.86</td>
+<td>731.07</td>
+<td>2493.08</td>
 <td>0.3101</td>
 <td>3624</td>
 <td>362.4</td>
@@ -1697,6 +1777,8 @@
 <td>50.0%</td>
 <td>715.65</td>
 <td>2704.16</td>
+<td>811.84</td>
+<td>306.79</td>
 <td>0.8927</td>
 <td>721</td>
 <td>72.1</td>
@@ -1726,6 +1808,8 @@
 <td>39.3%</td>
 <td>2069.00</td>
 <td>7996.72</td>
+<td>730.71</td>
+<td>3794.39</td>
 <td>0.2209</td>
 <td>3166</td>
 <td>316.6</td>
@@ -1755,6 +1839,8 @@
 <td>16.1%</td>
 <td>1116.31</td>
 <td>1985.01</td>
+<td>697.23</td>
+<td>868.99</td>
 <td>0.6381</td>
 <td>1504</td>
 <td>150.4</td>
@@ -1784,6 +1870,8 @@
 <td>21.5%</td>
 <td>2697.83</td>
 <td>6094.16</td>
+<td>571.62</td>
+<td>3932.82</td>
 <td>0.2215</td>
 <td>3487</td>
 <td>348.7</td>
@@ -1825,6 +1913,8 @@
 <th>Lat CV (%)</th>
 <th>Lat Min (ms)</th>
 <th>Lat Max (ms)</th>
+<th>TTFT (ms)</th>
+<th>Gen (ms)</th>
 <th>throughput (req/s)</th>
 <th>total tok</th>
 <th>avg tok</th>
@@ -1854,6 +1944,8 @@
 <td>49.9%</td>
 <td>1339.15</td>
 <td>4633.62</td>
+<td>558.55</td>
+<td>1311.52</td>
 <td>0.5347</td>
 <td>1567</td>
 <td>156.7</td>
@@ -1883,6 +1975,8 @@
 <td>5.0%</td>
 <td>5366.66</td>
 <td>6268.68</td>
+<td>561.53</td>
+<td>5053.77</td>
 <td>0.1780</td>
 <td>3869</td>
 <td>386.9</td>
@@ -1912,6 +2006,8 @@
 <td>12.8%</td>
 <td>1821.84</td>
 <td>2818.97</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4622</td>
 <td>1620</td>
 <td>162.0</td>
@@ -1941,6 +2037,8 @@
 <td>16.1%</td>
 <td>1116.31</td>
 <td>1985.01</td>
+<td>697.23</td>
+<td>868.99</td>
 <td>0.6381</td>
 <td>1504</td>
 <td>150.4</td>
@@ -1980,6 +2078,8 @@
 <th>Lat CV (%)</th>
 <th>Lat Min (ms)</th>
 <th>Lat Max (ms)</th>
+<th>TTFT (ms)</th>
+<th>Gen (ms)</th>
 <th>throughput (req/s)</th>
 <th>total tok</th>
 <th>avg tok</th>
@@ -2009,6 +2109,8 @@
 <td>38.3%</td>
 <td>3957.80</td>
 <td>15945.78</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0841</td>
 <td>4403</td>
 <td>440.3</td>
@@ -2038,6 +2140,8 @@
 <td>38.2%</td>
 <td>3933.48</td>
 <td>15997.62</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0853</td>
 <td>4403</td>
 <td>440.3</td>
@@ -2067,6 +2171,8 @@
 <td>22.9%</td>
 <td>3469.66</td>
 <td>7542.14</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1769</td>
 <td>3004</td>
 <td>300.4</td>
@@ -2096,6 +2202,8 @@
 <td>46.0%</td>
 <td>3401.22</td>
 <td>14515.95</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1555</td>
 <td>3004</td>
 <td>300.4</td>
@@ -2125,6 +2233,8 @@
 <td>4.6%</td>
 <td>9736.44</td>
 <td>11321.13</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0979</td>
 <td>6080</td>
 <td>608.0</td>
@@ -2154,6 +2264,8 @@
 <td>21.5%</td>
 <td>2697.83</td>
 <td>6094.16</td>
+<td>571.62</td>
+<td>3932.82</td>
 <td>0.2215</td>
 <td>3487</td>
 <td>348.7</td>
@@ -2193,6 +2305,8 @@
 <th>Lat CV (%)</th>
 <th>Lat Min (ms)</th>
 <th>Lat Max (ms)</th>
+<th>TTFT (ms)</th>
+<th>Gen (ms)</th>
 <th>throughput (req/s)</th>
 <th>total tok</th>
 <th>avg tok</th>
@@ -2222,6 +2336,8 @@
 <td>82.5%</td>
 <td>245.81</td>
 <td>17539.68</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1201</td>
 <td>4785</td>
 <td>478.5</td>
@@ -2251,6 +2367,8 @@
 <td>82.4%</td>
 <td>242.27</td>
 <td>16803.45</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1239</td>
 <td>4785</td>
 <td>478.5</td>
@@ -2280,6 +2398,8 @@
 <td>31.3%</td>
 <td>3329.67</td>
 <td>9197.46</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.1919</td>
 <td>4528</td>
 <td>452.8</td>
@@ -2309,6 +2429,8 @@
 <td>4.1%</td>
 <td>10137.13</td>
 <td>11561.07</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.0926</td>
 <td>7301</td>
 <td>730.1</td>
@@ -2338,6 +2460,8 @@
 <td>26.3%</td>
 <td>1866.48</td>
 <td>4201.86</td>
+<td>731.07</td>
+<td>2493.08</td>
 <td>0.3101</td>
 <td>3624</td>
 <td>362.4</td>
@@ -2367,6 +2491,8 @@
 <td>39.3%</td>
 <td>2069.00</td>
 <td>7996.72</td>
+<td>730.71</td>
+<td>3794.39</td>
 <td>0.2209</td>
 <td>3166</td>
 <td>316.6</td>
@@ -2406,6 +2532,8 @@
 <th>Lat CV (%)</th>
 <th>Lat Min (ms)</th>
 <th>Lat Max (ms)</th>
+<th>TTFT (ms)</th>
+<th>Gen (ms)</th>
 <th>throughput (req/s)</th>
 <th>total tok</th>
 <th>avg tok</th>
@@ -2435,6 +2563,8 @@
 <td>21.2%</td>
 <td>1174.13</td>
 <td>2781.90</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4427</td>
 <td>3426</td>
 <td>342.6</td>
@@ -2464,6 +2594,8 @@
 <td>21.2%</td>
 <td>1107.22</td>
 <td>2650.26</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4571</td>
 <td>3426</td>
 <td>342.6</td>
@@ -2493,6 +2625,8 @@
 <td>24.6%</td>
 <td>692.48</td>
 <td>1501.28</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.9852</td>
 <td>2922</td>
 <td>292.2</td>
@@ -2522,6 +2656,8 @@
 <td>12.9%</td>
 <td>1758.68</td>
 <td>2587.07</td>
+<td>N/A</td>
+<td>N/A</td>
 <td>0.4748</td>
 <td>3491</td>
 <td>349.1</td>
@@ -2551,6 +2687,8 @@
 <td>118.6%</td>
 <td>797.02</td>
 <td>10289.44</td>
+<td>724.78</td>
+<td>1568.05</td>
 <td>0.4360</td>
 <td>2658</td>
 <td>265.8</td>
@@ -2580,6 +2718,8 @@
 <td>50.0%</td>
 <td>715.65</td>
 <td>2704.16</td>
+<td>811.84</td>
+<td>306.79</td>
 <td>0.8927</td>
 <td>721</td>
 <td>72.1</td>
